# game_test

./: Architecture.mermaid  Cargo.toml  README.md  TODO.md  brain.rs  memo.md  navigation_backup.rs  rust-toolchain.toml
.agent/rules/: workspace.md
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/: rust.md
.github/: copilot-instructions.md
.github/chatmodes/: plan.chatmode.md  planner.chatmode.md  rust-gpt-4.1-beast-mode.chatmode.md
.github/prompts/: review.md
crates/client/: Cargo.toml
crates/client/src/: app.rs  audio.rs  camera.rs  debug.rs  entities.rs  entity.rs  flashlight.rs  game.rs  game_state.rs  gun_effects.rs  hud.rs  input.rs  input_manager.rs  lib.rs  lobby.rs  local_menu.rs  menu.rs  network.rs  render.rs
crates/client/src/inputs/: input.rs  input_map.rs  mod.rs  window.rs
crates/client/src/menu/: lobby.rs  local.rs  mod.rs
crates/client/src/tests/: flashlight_tests.rs  gun_effects_tests.rs  mod.rs
crates/client/src/vfx/: flashlight.rs  gun.rs  mod.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: host.rs  lib.rs  local_menu.rs  main.rs  native.rs  wasm.rs
crates/launcher/src/menu/: lobby.rs  local.rs  mod.rs
crates/launcher/src/tests/: app_flow.rs  basic.rs  ccc.rs  client_server_movement.rs  common.rs  common_init_fix.rs  deterministic_stepper.rs  end_to_end_test.rs  flow_test.rs  gameplay.rs  health.rs  input_handling_test.rs  late_joining_unit_test.rs  meshes_test.rs  mod.rs  movement_replication_unit_test.rs  movement_tests.rs  navigation_test.rs  network_e2e_test.rs  performance.rs  performance_test.rs  repro_issue.rs  repro_snapback.rs  stepper_test.rs  udp_integration_test.rs  udp_smoke.rs  world.rs
crates/launcher/tests/: client_server_integration_tests.rs  client_server_movement.rs  common.rs  diagnostic_test.rs  flow_test.rs  game_logic_tests.rs  input_movement_tests.rs  integration_test.rs  integration_tests.rs  meshes_test.rs  minimal_navigation_test.rs  movement_tests.rs  multiplayer_logic_tests.rs  navigation_system_tests.rs  navigation_test.rs  repro_snapback.rs
crates/llm/: Cargo.toml
crates/llm/src/: auto.rs  main.rs
crates/reinforcement_learning/: Cargo.toml  README.md  pyproject.toml  test_bindings.py  training_example.py  yolo_gym_env.py
crates/reinforcement_learning/src/: ai_bot.rs  lib.rs  reinforcement_learning.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  debug.rs  entities.rs  game.rs  gameplay.rs  input.rs  lib.rs  lobby.rs  network.rs  render.rs
crates/server/src/entities/: game.rs  mod.rs  npc.rs  player.rs
crates/shared/: Cargo.toml
crates/shared/src/: ai_bot.rs  bot.rs  bulkhead_door.rs  camera.rs  create_static_level.rs  culling.rs  debug.rs  enemy.rs  entities.rs  entity_implementations.rs  entity_spawner.rs  entity_traits.rs  game_state.rs  gym.rs  health.rs  input.rs  level_generation.rs  level_visuals.rs  lib.rs  movement.rs  navigation.rs  navigation_pathfinding.rs  protocol.rs  render.rs  scene.rs  stamina.rs  weapons.rs
crates/shared/src/components/: flashlight.rs  health.rs  mod.rs  weapons.rs
crates/shared/src/entities/: bot.rs  enemy.rs  health.rs  mod.rs  player.rs  stamina.rs  weapons.rs
crates/shared/src/inputs/: input.rs  look.rs  mod.rs  movement.rs
crates/shared/src/level/: building.rs  create_dynamic.rs  create_static.rs  generation.rs  mod.rs  render.rs  visuals.rs
crates/shared/src/tests/: ceiling_tests.rs  enemy_tests.rs  entity_spawner_tests.rs  entity_tests.rs  flashlight_tests.rs  gun_tests.rs  health_tests.rs  input_tests.rs  mod.rs  movement_tests.rs  navigation_tests.rs  protocol_tests.rs  weapon_tests.rs
