[workspace]
members = [
    "crates/client",
    "crates/shared",
    "crates/launcher",
    "crates/server",
    # "crates/llm",
    # "crates/reinforcement_learning",
]
resolver = "2"


[workspace.dependencies]
rand = "0.9.2"
clap = { version = "4.5.51", features = ["derive"] }
avian3d = { version = "0.4", default-features = true, features = ["serialize"] }
bevy = { version = "0.17.2", default-features = true }
bevy-inspector-egui = { version = "0.35.0", default-features = true }
bevy_egui = { version = "0.38.0", default-features = true }
serde = { version = "1.0.228", default-features = true, features = ["derive"] }
lightyear = { version = "0.25.3", default-features = true, features = [
    "netcode",
    "leafwing",
    "avian3d",
    "udp",
    "crossbeam",
    "prediction",
    "interpolation",
] }
leafwing-input-manager = { version = "0.18.0", default-features = true }
vleue_navigator = { version = "0.14.0", default-features = false, features = [
    "avian3d",
] }
ndarray = "0.16.1"
tokenizers = "0.21.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
