[workspace]
members = [
    "crates/client",
    "crates/shared",
    "crates/launcher",
    "crates/server",
    # "crates/llm",
    # "crates/reinforcement_learning",
]
resolver = "3"

[profile.test]
incremental = true
opt-level = 0
lto = false
debug = 0
debug-assertions = true
overflow-checks = true


[profile.dev]
incremental = true
opt-level = 0
lto = false
debug = 0
debug-assertions = true
overflow-checks = true


[workspace.dependencies]
rand = "0.9.2"
clap = { version = "4.5.54", features = ["derive"] }
avian3d = { version = "0.4", default-features = true, features = ["serialize"] }
bevy = { version = "0.17.3", default-features = true }
bevy-inspector-egui = { version = "0.35.0", default-features = true }
bevy_egui = { version = "0.37.0", default-features = true }
serde = { version = "1.0.228", default-features = true, features = ["derive"] }
lightyear = { version = "0.25.5", default-features = true, features = [
    "netcode",
    "leafwing",
    "avian3d",
    "udp",
    "crossbeam",
    "prediction",
    "interpolation",
] }
leafwing-input-manager = { version = "0.19.0", default-features = true }
vleue_navigator = { version = "0.14.0", default-features = false, features = [
    "avian3d",
] }
# ndarray = "0.16.1"
# tokenizers = "0.21.4"

[workspace.lints.clippy]
type-complexity = "allow"
