[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
server = { path = "../server" }
client = { path = "../client" }
clap.workspace = true
lightyear.workspace = true
bevy.workspace = true

[[bin]]
name = "launcher"
path = "src/main.rs"

[lib]
name = "launcher"
path = "src/lib.rs"
