[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
server = { path = "../server" }
client = { path = "../client" }
clap.workspace = true
lightyear.workspace = true
bevy.workspace = true
avian3d.workspace = true
leafwing-input-manager.workspace = true

[dev-dependencies]
crossbeam-channel = "0.5"
lightyear_tests = { git = "https://github.com/cBournhonesque/lightyear", branch = "main" }

[features]
legacy_udp_tests = []

[[bin]]
name = "launcher"
path = "src/main.rs"


[lints]
workspace = true
