[package]
name = "reinforcement_learning"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.33.2"
rand = "0.8.5"
bevy.workspace = true
avian3d.workspace = true
lightyear.workspace = true
leafwing-input-manager.workspace = true
serde.workspace = true
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[lints]
workspace = true
