[package]
name = "reinforcement_learning"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = "0.32"
rand = "0.9.2"
bevy.workspace = true
avian3d.workspace = true
lightyear.workspace = true
leafwing-input-manager.workspace = true
serde.workspace = true
shared = { path = "../shared" }
burn = { version = "0.18.0", features = ["ndarray"] }
burn-train = { version = "0.18.0" }
