[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
lightyear.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
vleue_navigator.workspace = true
pathfinding = "4.14.0"
nalgebra = "0.34.1"
