[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
rand.workspace = true
lightyear.workspace = true
leafwing-input-manager.workspace = true
avian3d.workspace = true
serde.workspace = true
bevy.workspace = true
bevy-inspector-egui.workspace = true
vleue_navigator.workspace = true

[lints]
workspace = true
